--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Better admission list",
+  "name": "better-admission-list",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -24,13 +24,16 @@
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
     "@babel/preset-typescript": "^7.7.4",
-    "@material-ui/core": "^4.9.1",
+    "@koa/cors": "^3.1.0",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.45",
     "@svgr/webpack": "^5.3.0",
+    "@types/axios": "^0.14.0",
     "@types/html-webpack-plugin": "^3.2.1",
     "@types/koa": "^2.11.0",
     "@types/koa-compose": "^3.2.5",
+    "@types/koa-compress": "^4.0.0",
     "@types/koa-logger": "^3.1.1",
     "@types/koa-mount": "^4.0.0",
     "@types/koa-router": "^7.0.42",
@@ -43,6 +46,8 @@
     "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-router-dom": "^5.1.3",
     "@types/webpack": "^4.41.8",
+    "axios": "^0.19.2",
+    "axios-hooks": "^2.1.0",
     "babel-loader": "^8.0.6",
     "config": "^3.2.4",
     "config-webpack": "^1.0.4",
@@ -54,12 +59,15 @@
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
     "koa-compose": "^4.1.0",
+    "koa-compress": "^5.0.1",
     "koa-logger": "^3.2.1",
     "koa-mount": "^4.0.0",
     "koa-router": "^7.4.0",
     "koa-send": "^5.0.0",
     "koa-static": "^5.0.0",
     "koa-webpack": "^5.2.4",
+    "material-table": "^1.66.0",
+    "node-fetch": "^2.6.0",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
     "query-string": "^6.11.1",
@@ -67,6 +75,8 @@
     "react-dom": "^16.12.0",
     "react-infinite-scroller": "^1.2.4",
     "react-router-dom": "^5.1.2",
+    "safe-memory-cache": "^2.0.0",
+    "tabletojson": "^2.0.4",
     "ts-node": "^8.5.4",
     "typescript": "^3.8.3",
     "url-loader": "^3.0.0",
