--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "core-js": "^3.6.4",
     "dotenv": "^8.2.0",
     "eslint-plugin-simple-import-sort": "^5.0.3",
+    "html-table-to-json": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
