--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "WebMathMech",
-  "name": "WebMathMech UrFU course website",
+  "short_name": "Better UrFU admission list",
+  "name": "Better UrFU admission list",
   "icons": [
     {
       "src": "/favicon.ico",
